gulp/assets/stylesheets/components/_topbar.scss
/**
 * Topbar
 */
.topbar {
  @include clearfix;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  background: #fff;
  border-bottom: 1px solid #EBEDF0;
}

.body-space {
  .topbar {
    border-bottom: 0;
  }

  input.topbar-search {
    width: 301px;
    border-right: 1px solid #EBEDF0;
    border-bottom: 1px solid #EBEDF0;
  }
}



/**
 * Search
 */
input.topbar-search {
  display: block;
  float: left;
  background: #fff;
  width: 300px;
  width: calc(100% - 350px);
  height: 60px;
  padding: 22px 30px;
  margin: 0;
  border: 0;
  border-radius: 0;
  font-size: 14px;
  line-height: 16px;
  color: $color-text-primary;
  transition: all 0.3s;

  &:hover, &:focus {
    outline: none;
  }

  &::-webkit-input-placeholder {
    color: #A6A6A6;
  }

  &::-moz-placeholder {
    color: #A6A6A6;
  }

  &:-ms-input-placeholder {
    color: #A6A6A6;
  }
}



/**
 * Navigation container
 */
nav {
  @include clearfix;
  float: right;

  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li {
    float: left;
  }

  a {
    display: block;
    font-size: 13px;
    line-height: 60px;
    color: $color-text-secondary;
    text-decoration: none;
    transition: all 0.3s;
    vertical-align: middle;

    &:hover, &:active, &:focus {
      color: $color-text-secondary;
      text-decoration: none;
      opacity: 0.6;
    }
  }
}



/**
 * Spaces navigation
 */
.topbar-spaces {
  background: transparent url(../assets/images/topbar/spaces-thumb@2x.png) no-repeat 24px center;
  background-size: 30px 30px;
  padding: 0 24px 0 72px;
}



/**
 * Team navigation
 */
.topbar-team {
  padding: 0 24px;

  img {
    display: inline-block;
    width: 30px;
    height: 30px;
    margin: 0 18px 0 0;
    border-radius: 4px;
  }
}



/**
 * Account navigation
 */
.topbar-account {
  padding: 0 24px;

  img {
    display: inline-block;
    width: 30px;
    height: 30px;
    border-radius: 15px;
  }
}

